Fixed gap at the top of the front page for the ilri theme.

--- a/sites/all/themes/ilri/less/style.less
+++ b/sites/all/themes/ilri/less/style.less
@@ -14,9 +14,9 @@
   font-style: normal;
 }
 
-header#navbar{
-  nav{
-    section#block-search-form{
+header#navbar {
+  nav {
+    section#block-search-form {
       margin: 0 0 0 0;
     }
   }
@@ -206,6 +206,18 @@ section {
     a {
       display: inline-block;
       margin-right: 20px;
+    }
+  }
+}
+
+body {
+  &.front {
+    padding-top: 0px !important;
+    &.admin-menu {
+      margin-top: 0px !important;
+      &.navbar-is-fixed-top {
+        padding-top: 0px !important;
+      }
     }
   }
 }
